# Rust_Projects

./: .gitignore  README.md
Chat_Application/: Cargo.toml
HTTP_Server/: Cargo.toml
HTTP_Server/public/: index.html
HTTP_Server/src/: main.rs
Web_Scrapper/: Cargo.toml  index.html  output.json
Web_Scrapper/src/: main.rs
