[package]
name = "Web_Scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
log = "0.4"